--- a/manifest.yaml
+++ b/manifest.yaml
@@ -140,15 +140,15 @@ packages:
   - powertop
 
   ## from gnome-desktop-pkgs.yaml
-  # - ModemManager
-  # - NetworkManager-adsl
-  # - NetworkManager-openconnect-gnome
-  # - NetworkManager-openvpn-gnome
-  # - NetworkManager-ppp
-  # - NetworkManager-pptp-gnome
-  # - NetworkManager-ssh-gnome
-  # - NetworkManager-vpnc-gnome
-  # - NetworkManager-wwan
+  - ModemManager
+  - NetworkManager-adsl
+  - NetworkManager-openconnect-gnome
+  - NetworkManager-openvpn-gnome
+  - NetworkManager-ppp
+  - NetworkManager-pptp-gnome
+  - NetworkManager-ssh-gnome
+  - NetworkManager-vpnc-gnome
+  - NetworkManager-wwan
   - adobe-source-code-pro-fonts
   - at-spi2-atk
   - at-spi2-core
