--- a/manifest.yaml
+++ b/manifest.yaml
@@ -199,7 +199,7 @@ packages:
   ## from fedora-common-ostree-pkgs.yaml
   - NetworkManager
   - NetworkManager-bluetooth
-  # - NetworkManager-config-connectivity-fedora
+  - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-wwan
   - aajohan-comfortaa-fonts
