--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,7 +3,7 @@ include:
   - manifests/ignition-and-ostree.yaml
   # - workstation-ostree-config/fedora-common-ostree-pkgs.yaml
 
-releasever: "32"
+releasever: "33"
 
 rojig:
   license: MIT
@@ -121,26 +121,30 @@ packages:
   - jq
   # nvme-cli for managing nvme disks
   - nvme-cli
+  # zram-generator (but not zram-generator-defaults) for F33 change
+  # https://github.com/coreos/fedora-coreos-tracker/issues/509
+  - zram-generator
+
   ## Custom
+  - hdparm
+  - lm_sensors
+  - nmap
+  - ipmitool
   - libva-utils vulkan-tools
   - libva-intel-hybrid-driver libva-intel-driver
   - libvirt-daemon-kvm
   - libvirt-client virt-viewer
-  - ipmitool
   - kubernetes-client
   - tmux xclip vim-enhanced strace
-  - eog mpv
+  - eog gimp
+  - mpv
   - toolbox
   - buildah podman-compose
   - flatpak flatpak-builder
-  - mkpasswd
   - git-core
   - gnupg2
   - rsync
-  - librtmp
-  - youtube-dl
-  - gimp
-  - pulseaudio-module-zeroconf
+  - mkpasswd
   # - code
 
   ## from gnome-desktop-pkgs.yaml
@@ -156,23 +160,31 @@ packages:
   - adobe-source-code-pro-fonts
   - at-spi2-atk
   - at-spi2-core
+  - avahi
   # - chrome-gnome-shell
   - dconf
   - gdm
   - glib-networking
   - gnome-backgrounds
   - gnome-bluetooth
+  # - gnome-classic-session
   - gnome-color-manager
   - gnome-control-center
+  # - gnome-disk-utility
+  # - gnome-getting-started-docs
+  # - gnome-initial-setup
   - gnome-remote-desktop
   - gnome-session-wayland-session
   - gnome-session-xsession
   - gnome-settings-daemon
   - gnome-shell
+  # - gnome-software
+  # - gnome-system-monitor
   - gnome-terminal
   - gnome-terminal-nautilus
   - gnome-themes-extra
   - gnome-user-docs
+  # - gnome-user-share
   - gvfs-afc
   - gvfs-afp
   - gvfs-archive
@@ -189,9 +201,9 @@ packages:
   - mesa-libEGL
   - mousetweaks
   - nautilus
-  - nautilus-sendto
   - orca
   - polkit
+  # - rygel
   - tracker
   - tracker-miners
   - xdg-desktop-portal
@@ -225,7 +237,6 @@ packages:
   - bc
   # - bind-utils
   - bluez-cups
-  - bridge-utils
   - btrfs-progs
   - bzip2
   - chrony
@@ -248,6 +259,7 @@ packages:
   - ethtool
   # - fedora-bookmarks
   # - fedora-chromium-config
+  - fedora-repos-modular
   - fedora-workstation-backgrounds
   - file
   - filesystem
@@ -313,6 +325,8 @@ packages:
   - liberation-mono-fonts
   - liberation-sans-fonts
   - liberation-serif-fonts
+  - libertas-sd8686-firmware
+  - libertas-sd8787-firmware
   - libertas-usb8388-firmware
   - linux-firmware
   - logrotate
@@ -335,16 +349,17 @@ packages:
   - mpage
   - mtr
   # - nano
+  # - nano-default-editor
   - nfs-utils
   - nss-altfiles
   - nss-mdns
   # - ntfsprogs
+  - opensc
   - openssh-clients
   # - openssh-server
   - paktype-naskh-basic-fonts
   - pam_afs_session
   - paps
-  - paratype-pt-sans-fonts
   - passwd
   - passwdqc
   - pciutils
@@ -355,6 +370,7 @@ packages:
   - policycoreutils-python-utils
   - procps-ng
   - psmisc
+  - pt-sans-fonts
   - pulseaudio
   # - pulseaudio-module-x11
   - pulseaudio-utils
@@ -370,7 +386,6 @@ packages:
   - realmd
   - rng-tools
   - rootfiles
-  - rp-pppoe
   - rpm
   - rsync
   # - samba-client
@@ -397,14 +412,13 @@ packages:
   - time
   - tree
   - unzip
+  - uresourced
   - usb_modeswitch
   - usbutils
   - util-linux
-  - vconfig
   - vim-minimal
   - wget
   - which
-  - wireless-tools
   - words
   # - xorg-x11-drv-amdgpu
   # - xorg-x11-drv-ati
@@ -420,7 +434,7 @@ packages:
   # - xorg-x11-xinit
   - zd1211-firmware
   - zip
-  - zram
+  - zram-generator-defaults
 
 # This thing is crying out to be pulled into systemd, but that hasn't happened
 # yet.  Also we may want to add to rpm-ostree something like arch negation;
