Refactor config subdir

--- a/builds/laptop/manifest.yaml
+++ b/builds/laptop/manifest.yaml
@@ -1,387 +1,16 @@
 include:
-  - base.yaml
-
-rojig:
-  license: MIT
-  name: fedora-silverblue
-  summary: Fedora Silverblue
-
-repos:
-  - rpmfusion-free
-  - rpmfusion-free-updates
-  # - rpmfusion-nonfree
-  # - rpmfusion-nonfree-updates
-  - fedora-rawhide
-  # - code
-
-default_target: graphical.target
+  - client.yaml
 
 packages:
-  - fedora-repos-ostree
-  # System setup
-  - passwd
-  # Dependency of 20live dracut module
-  - bsdtar
-  # SSH
-  - openssh-clients
-  # Containers
-  - podman skopeo runc systemd-container catatonit
-  - fuse-overlayfs slirp4netns
-  # Remote IPC for podman
-  - libvarlink-util
-  # Networking
-  - hostname
-  - iproute-tc
-  # Static firewalling
-  - nftables iptables-nft
-  # WireGuard https://github.com/coreos/fedora-coreos-tracker/issues/362
-  - wireguard-tools
-  # Storage
-  - cloud-utils-growpart
-  - lvm2 iscsi-initiator-utils sg3_utils
-  - device-mapper-multipath
-  - xfsprogs e2fsprogs btrfs-progs mdadm
-  - cryptsetup
-  # Time sync
-  - chrony
-  # Allow communication between sudo and SSSD
-  # for caching sudo rules by SSSD.
-  # https://github.com/coreos/fedora-coreos-tracker/issues/445
-  - libsss_sudo
-  # Extra runtime
-  - sssd shadow-utils
-  # There are things that write outside of the journal still (such as the classic wtmp, etc.)
-  # (auditd also writes outside the journal but it has its own log rotation.)
-  # Anything package layered will also tend to expect files dropped in
-  # /etc/logrotate.d to work.  Really, this is a legacy thing, but if we don't
-  # have it then people's disks will slowly fill up with logs.
-  - logrotate
-  # Used by admins interactively
-  - sudo coreutils attr less tar xz gzip bzip2
-  - socat ldns-utils
-  - bash-completion
-  - openssl
-  - vim-minimal
-  - lsof
-  # CoreOS Installer
-  - coreos-installer coreos-installer-bootinfra
-  # i18n
-  - kbd
-  # Parsing/Interacting with JSON data
-  - jq
-  # nvme-cli for managing nvme disks
-  - nvme-cli
-  # zram-generator (but not zram-generator-defaults) for F33 change
-  # https://github.com/coreos/fedora-coreos-tracker/issues/509
-  - zram-generator
-
-  ## Custom
-  - hdparm
-  - lm_sensors
-  - nmap
-  - ipmitool
-  - libva-utils vulkan-tools
-  - libva-intel-hybrid-driver libva-intel-driver
-  - libvirt-client virt-viewer
-  - kubernetes-client
-  - tmux xclip vim-enhanced strace
-  - eog
-  - mpv
-  - toolbox
-  - buildah podman-compose
-  - flatpak flatpak-builder
-  - git-core
-  - gnupg2
-  - rsync
-  - mkpasswd
-  # - code
-
-  ## from gnome-desktop-pkgs.yaml
-  # - ModemManager
-  - NetworkManager-adsl
-  - NetworkManager-openconnect-gnome
-  - NetworkManager-openvpn-gnome
-  - NetworkManager-ppp
-  - NetworkManager-pptp-gnome
-  - NetworkManager-ssh-gnome
-  - NetworkManager-vpnc-gnome
-  - NetworkManager-wwan
-  - adobe-source-code-pro-fonts
-  - at-spi2-atk
-  - at-spi2-core
-  - avahi
-  # - chrome-gnome-shell
-  - dconf
-  - gdm
-  - glib-networking
-  - gnome-backgrounds
-  - gnome-bluetooth
-  # - gnome-classic-session
-  - gnome-color-manager
-  - gnome-control-center
-  # - gnome-disk-utility
-  # - gnome-getting-started-docs
-  # - gnome-initial-setup
-  - gnome-remote-desktop
-  - gnome-session-wayland-session
-  # - gnome-session-xsession
-  - gnome-settings-daemon
-  - gnome-shell
-  # - gnome-software
-  # - gnome-system-monitor
-  - gnome-terminal
-  - gnome-terminal-nautilus
-  - gnome-themes-extra
-  - gnome-user-docs
-  # - gnome-user-share
-  - gvfs-afc
-  - gvfs-afp
-  - gvfs-archive
-  - gvfs-fuse
-  - gvfs-goa
-  - gvfs-gphoto2
-  - gvfs-mtp
-  # - gvfs-smb
-  - libcanberra-gtk2
-  - libcanberra-gtk3
-  - libproxy-mozjs
-  - librsvg2
-  - libsane-hpaio
-  - mesa-libEGL
-  - mousetweaks
-  - nautilus
-  - orca
-  - polkit
-  # - rygel
-  - tracker
-  - tracker-miners
-  - xdg-desktop-portal
-  - xdg-desktop-portal-gtk
-  - xdg-user-dirs-gtk
-  - yelp
-
   ## from fedora-common-ostree-pkgs.yaml
-  - fedora-release-silverblue
   - NetworkManager
-  - NetworkManager-bluetooth
+  # - NetworkManager-bluetooth
   - NetworkManager-config-connectivity-fedora
   - NetworkManager-wifi
   - NetworkManager-wwan
-  - aajohan-comfortaa-fonts
-  - abattis-cantarell-fonts
-  - acl
-  # - adwaita-qt4
-  # - adwaita-qt5
-  - alsa-plugins-pulseaudio
-  - alsa-sof-firmware
-  - alsa-ucm
-  - alsa-utils
-  - atmel-firmware
-  - attr
-  # - audit
-  - b43-fwcutter
-  - b43-openfwwf
-  - basesystem
-  - bash
-  - bash-completion
-  - bc
-  # - bind-utils
-  - bluez-cups
-  - btrfs-progs
-  - bzip2
-  - chrony
-  # - cifs-utils
-  - colord
-  - coreutils
-  - cpio
-  - cryptsetup
-  - cups
-  - cups-filters
-  - curl
-  - cyrus-sasl-plain
-  - dejavu-sans-fonts
-  - dejavu-sans-mono-fonts
-  - dejavu-serif-fonts
-  - dhcp-client
-  - dnsmasq
-  - e2fsprogs
-  - earlyoom
-  - ethtool
-  # - fedora-bookmarks
-  # - fedora-chromium-config
-  - fedora-repos-modular
-  - fedora-workstation-backgrounds
-  - file
-  - filesystem
-  - firefox
-  # - firewalld
-  - foomatic
-  - foomatic-db-ppds
-  - fpaste
-  - fros-gnome
-  - gamemode
-  - glibc
-  - glibc-all-langpacks
-  - glx-utils
-  - gnupg2
-  - google-noto-emoji-color-fonts
-  - google-noto-sans-cjk-ttc-fonts
-  - google-noto-sans-gurmukhi-fonts
-  - google-noto-sans-sinhala-vf-fonts
-  - gstreamer1-plugins-bad-free
-  - gstreamer1-plugins-good
-  - gutenprint
-  - gutenprint-cups
-  - hostname
-  - hplip
-  - hunspell
-  - ibus-gtk3
-  - ibus-hangul
-  - ibus-kkc
-  - ibus-libpinyin
-  - ibus-libzhuyin
-  - ibus-m17n
-  # - ibus-qt
-  - ibus-typing-booster
-  # - iproute
-  # - iptables
-  - iptstate
-  - iputils
-  - ipw2100-firmware
-  - ipw2200-firmware
-  - iwl100-firmware
-  - iwl1000-firmware
-  - iwl105-firmware
-  - iwl135-firmware
-  - iwl2000-firmware
-  - iwl2030-firmware
-  - iwl3160-firmware
-  - iwl3945-firmware
-  - iwl4965-firmware
-  - iwl5000-firmware
-  - iwl5150-firmware
-  - iwl6000-firmware
-  - iwl6000g2a-firmware
-  - iwl6000g2b-firmware
-  - iwl6050-firmware
-  - iwl7260-firmware
-  - jomolhari-fonts
-  - julietaula-montserrat-fonts
-  - kbd
-  - kernel
-  - kernel-modules-extra
-  - khmeros-base-fonts
-  - less
-  - liberation-mono-fonts
-  - liberation-sans-fonts
-  - liberation-serif-fonts
-  - libertas-sd8686-firmware
-  - libertas-sd8787-firmware
-  - libertas-usb8388-firmware
-  - linux-firmware
-  - logrotate
-  - lohit-assamese-fonts
-  - lohit-bengali-fonts
-  - lohit-devanagari-fonts
-  - lohit-gujarati-fonts
-  - lohit-kannada-fonts
-  - lohit-odia-fonts
-  - lohit-tamil-fonts
-  - lohit-telugu-fonts
-  - lrzsz
-  - lsof
-  - man-db
-  - man-pages
-  - mdadm
-  - mesa-dri-drivers
-  - mesa-vulkan-drivers
-  - mlocate
-  - mpage
-  - mtr
-  # - nano
-  # - nano-default-editor
-  - nfs-utils
-  - nss-altfiles
-  - nss-mdns
-  # - ntfsprogs
-  - opensc
-  - openssh-clients
-  # - openssh-server
-  - paktype-naskh-basic-fonts
-  - pam_afs_session
-  - paps
-  - passwd
-  - passwdqc
-  - pciutils
-  - pinfo
-  - plymouth
-  - plymouth-system-theme
-  - policycoreutils
-  - policycoreutils-python-utils
-  - procps-ng
-  - psmisc
-  - pt-sans-fonts
-  - pulseaudio
-  # - pulseaudio-module-x11
-  - pulseaudio-utils
-  # - qemu-guest-agent
-  # - qt
-  # - qt-settings
-  # - qt-x11
-  # - qt5-qtbase
-  # - qt5-qtbase-gui
-  # - qt5-qtdeclarative
-  # - qt5-qtxmlpatterns
-  - quota
-  - realmd
-  - rng-tools
-  - rootfiles
-  - rpm
-  - rsync
-  # - samba-client
-  - selinux-policy-targeted
-  - setup
-  - shadow-utils
-  - sil-abyssinica-fonts
-  - sil-mingzat-fonts
-  - sil-nuosu-fonts
-  - sil-padauk-fonts
-  - smc-meera-fonts
-  - sos
-  - spice-vdagent
-  - sssd
-  - sssd-common
-  - sssd-kcm
-  - stix-fonts
-  - sudo
-  - system-config-printer-udev
-  - systemd
-  - systemd-udev
-  - tar
-  - thai-scalable-waree-fonts
-  - time
-  - tree
-  - unzip
-  - uresourced
-  - usb_modeswitch
-  - usbutils
-  - util-linux
-  - vim-minimal
-  - wget
-  - which
-  - words
-  # - xorg-x11-drv-amdgpu
-  # - xorg-x11-drv-ati
-  # - xorg-x11-drv-evdev
-  # - xorg-x11-drv-fbdev
-  # - xorg-x11-drv-libinput
-  # - xorg-x11-drv-nouveau
-  # - xorg-x11-drv-qxl
-  # - xorg-x11-drv-wacom
-  # - xorg-x11-server-Xorg
-  # - xorg-x11-utils
-  # - xorg-x11-xauth
-  # - xorg-x11-xinit
-  - zd1211-firmware
-  - zip
-  - zram-generator-defaults
+
+# Things we don't expect to ship on the host.  We currently
+# have recommends: false so these could only come in via
+# hard requirement, in which case the build will fail.
+exclude-packages:
+  - systemd-networkd
