--- a/builds/server/manifest.yaml
+++ b/builds/server/manifest.yaml
@@ -1,93 +1,2 @@
 include:
-  - base.yaml
-
-rojig:
-  license: MIT
-  name: fedora-coreos
-  summary: Fedora CoreOS
-
-default-target: multi-user.target
-
-remove-files:
-  # We don't ship man(1) or info(1)
-  - usr/share/info
-  - usr/share/man
-  # Drop text docs too
-  - usr/share/doc
-
-packages:
-  - fedora-release-coreos
-  - fedora-repos-ostree
-  - fedora-repos-modular
-  - fedora-repos-archive
-  # # CL ships this.
-  - containerd cri-tools
-
-  ## fedora-coreos-base
-  # Security
-  - selinux-policy-targeted
-  - polkit
-  # System setup
-  - passwd
-  # Dependency of 20live dracut module
-  - bsdtar
-  # SSH
-  - openssh-server openssh-clients
-  # Containers
-  - podman skopeo runc systemd-container catatonit
-  - fuse-overlayfs slirp4netns
-  # Remote IPC for podman
-  - libvarlink-util
-  # Networking
-  - hostname
-  - iproute-tc
-  # Static firewalling
-  - nftables iptables-nft
-  # Storage
-  - cloud-utils-growpart
-  - lvm2 iscsi-initiator-utils sg3_utils
-  - device-mapper-multipath
-  - xfsprogs e2fsprogs btrfs-progs mdadm
-  - cryptsetup
-  # Time sync
-  - chrony
-  # Allow communication between sudo and SSSD
-  # for caching sudo rules by SSSD.
-  # https://github.com/coreos/fedora-coreos-tracker/issues/445
-  - libsss_sudo
-  # Extra runtime
-  - sssd shadow-utils
-  # There are things that write outside of the journal still (such as the classic wtmp, etc.)
-  # (auditd also writes outside the journal but it has its own log rotation.)
-  # Anything package layered will also tend to expect files dropped in
-  # /etc/logrotate.d to work.  Really, this is a legacy thing, but if we don't
-  # have it then people's disks will slowly fill up with logs.
-  - logrotate
-  # Used by admins interactively
-  - sudo coreutils attr less tar xz gzip bzip2
-  - socat ldns-utils
-  - bash-completion
-  - openssl
-  - vim-minimal
-  - lsof
-  # CoreOS Installer
-  - coreos-installer coreos-installer-bootinfra
-  # i18n
-  - kbd
-  # Parsing/Interacting with JSON data
-  - jq
-  # nvme-cli for managing nvme disks
-  - nvme-cli
-  # zram-generator (but not zram-generator-defaults) for F33 change
-  # https://github.com/coreos/fedora-coreos-tracker/issues/509
-  - zram-generator
-
-  ## Custom
-  - systemd-networkd
-  - libvirt-daemon-kvm
-  - kea keepalived
-  - qemu-guest-agent
-
-add-files:
-  - [resources/matchbox.tar, /etc/container-save/matchbox.tar]
-  - [resources/SAS9300_8i_IT.bin, /etc/libvirt/boot/SAS9300_8i_IT.bin]
+  - server.yaml
