--- a/manifests/client.yaml
+++ b/manifests/client.yaml
@@ -35,7 +35,8 @@ packages:
   - mkpasswd
   - wireguard-tools
   - dymo-cups-drivers
-  - eog mpv inkscape gimp brave-browser codium
+  - eog mpv
+  - inkscape gimp brave-browser codium
 
   ## from gnome-desktop-pkgs.yaml
   # - ModemManager
@@ -55,7 +56,7 @@ packages:
   - dconf
   - gdm
   - glib-networking
-  - gnome-backgrounds
+  # - gnome-backgrounds
   - gnome-bluetooth
   # - gnome-classic-session
   - gnome-color-manager
@@ -83,7 +84,7 @@ packages:
   - gvfs-gphoto2
   - gvfs-mtp
   # - gvfs-smb
-  - libcanberra-gtk2
+  # - libcanberra-gtk2
   - libcanberra-gtk3
   - libproxy-mozjs
   - librsvg2
@@ -255,10 +256,10 @@ packages:
   - passwdqc
   - pciutils
   - pinfo
-  - plymouth
-  - plymouth-system-theme
+  # - plymouth
+  # - plymouth-system-theme
   - policycoreutils
-  - policycoreutils-python-utils
+  # - policycoreutils-python-utils
   - procps-ng
   - psmisc
   - pt-sans-fonts
@@ -307,7 +308,7 @@ packages:
   - usb_modeswitch
   - usbutils
   - util-linux
-  - vim-minimal
+  # - vim-minimal
   - wget
   - which
   - words
