--- a/builds/server/image.yaml
+++ b/builds/server/image.yaml
@@ -14,6 +14,7 @@ extra-kargs:
     - console=tty0
     - console=ttyS0,115200n8
     - console=ttyS1,115200n8
+    - elevator=noop
     - video=efifb:off
     - rd.driver.pre=vfio-pci
     # FCOS is not able to load these from modules.d
