--- a/manifests/base.yaml
+++ b/manifests/base.yaml
@@ -137,8 +137,8 @@ exclude-packages:
   - python
   - python2
   - python2-libs
-  - python3
-  - python3-libs
+  # - python3
+  # - python3-libs
   - perl
   - nodejs
   - dnf
